--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8" />
-    <title>TEST</title>
-</head>
-<a href="https://google.com" class="button">Go to PROXY</a>
-<body>
-    
-</body>
+    <body>
+        <head>
+            <meta charset="UTF-8">
+            <title>TEST WEBSITE</title>
+        </head>
+        <h1>TESTICULAR CANCER</h1>
+    </body>
 </html>
